notes/ics/ccc/v0.2/B-Overview/B.01-introduction.md
---
title: Community Connection & Commitment Commons Introduction
description: Introduction to the Community Connection & Commitment Commons system combining Connection Commons and Commitment Commons to create a local economic network
author: ICS Team
tags:
  - community-connection-commitment-commons
  - introduction
  - overview
  - connection-commons
  - commitment-commons
aliases:
  - C4 Introduction
  - Community Connection & Commitment Commons Overview
publish: "false"
type: note
---

# Community Connection & Commitment Commons: Connecting Curiosity and Commitment in London

## Project Organizations

The Community Connection & Commitment Commons is being developed and implemented through a collaborative effort:

**Institute for Community Sustainability (ICS)** is the lead organization for this project, providing stewardship, facilitation, and practical implementation support. ICS has seeded and incubated this initiative as part of its mission to build resilient local economies and strengthen community connections in London, Ontario.

**SuperBenefit Network** has provided theoretical development, documentation, and technical expertise for the project, drawing on their experience with decentralized economic systems and community governance.

This project is also connected to the broader **Ethereum Localism** community (ethereumlocalism.xyz), which explores how tools like distributed ledgers can support place-based, regenerative economic systems.

## Inspiration and Theoretical Foundation

The Community Connection & Commitment Commons is inspired by ancient resource coordination practices documented in William Ruddick's "Grassroots Economics" book. These practices, which Ruddick refers to as "Commitment Pooling," have existed across human cultures for millennia in various forms.

Ruddick's work shows how these ancestral practices of pooling commitments rather than relying exclusively on currency can be adapted for contemporary communities. His documentation of traditional systems in Kenya and East Africa demonstrates how these ancient protocols create resilient networks of mutual support.

Our model adapts these time-tested concepts to the London, Ontario context, building on protocols that humans have used for centuries while tailoring the implementation to our specific community needs. We acknowledge both the indigenous wisdom embedded in these practices and Ruddick's valuable work in documenting and reviving them for modern contexts.

## Introduction

The Community Connection & Commitment Commons (C4) is a local economic system that combines relationship-building with resource sharing. It creates a space where people can both connect through their interests and skills (Connection Commons) and support each other through a structured exchange of services and resources (Commitment Commons).

Unlike conventional economic systems that rely solely on money, C4 harnesses our community's abundance—our time, skills, knowledge, and resources—creating resilience through mutual support and reciprocity.

> **Think of it like a giant potluck dinner.** Everyone brings something they love to cook or eat, and everyone gets plenty to enjoy. It all just works—as long as not everyone brings the same course. And then there's always plenty of leftovers to share! C4 works the same way, with everyone contributing what they do best and everyone having their needs met in the process.

## Core Components

The Community Connection & Commitment Commons consists of three distinct yet complementary components:

1. **Belonging Commons**: The entry point to the system, where everyone is welcome to participate in community soup gatherings and explore the possibility of deeper engagement.

2. **Connection Commons**: An ongoing program that facilitates relationship-building and skill-sharing within the community. While centered around monthly gatherings, the Connection Commons involves continuous matching and connection-making between community members based on shared interests, skills, and needs. This component represents a deeper investment of time and energy, focusing on building the relational foundation that enables resource exchange to flourish.

3. **Commitment Commons**: A structured system where members formalize specific offers of goods and services, earn credits for their contributions, and can redeem those credits within the community network. This component provides the practical infrastructure for tracking and exchanging community resources.

> **Think of it like a garden and its irrigation system.** The Connection Commons is like the living garden itself—diverse, growing, and constantly evolving with the seasons. The Commitment Commons is like the irrigation system—the structured channels that ensure water and nutrients flow where they're needed most. Both are essential: the most elaborate irrigation system is useless without plants to nourish, while even the most beautiful garden will wither without a reliable way to distribute water.

## Comparing Connection Commons and Commitment Commons

| Aspect | Connection Commons | Commitment Commons |
|--------|-------------------|-----------------|
| **Primary Focus** | Relationship-building, skills exchange | Resource coordination, service exchange |
| **Time Investment** | Higher - ongoing relationship cultivation | Variable - based on specific exchanges |
| **Structure** | Flexible, evolving connections | Formalized commitments and tracking |
| **Exchange Medium** | Direct sharing, learning, teaching | Credits for documented contributions |
| **Record Keeping** | Minimal - focuses on connections made | Detailed - tracks credits and exchanges |
| **Entry Point** | Monthly gatherings with ongoing facilitation | Registration of specific offers and needs |
| **Value Creation** | Long-term social capital, skill development | Immediate resource access, practical support |
| **Community Role** | Building the foundation of trust | Operationalizing trusted exchanges |

## Integration of All Components

While members may initially engage more with one component than another, the full power of the Community Connection & Commitment Commons emerges when all operate in harmony:

- The Belonging Commons welcomes newcomers and creates initial points of connection
- The Connection Commons builds the relationships and trust that make the Commitment Commons possible
- The Commitment Commons provides practical infrastructure for the connections formed in the Connection Commons
- Together, they create a holistic ecosystem where both social and material needs can be met

> **It's like music.** The Connection Commons is the melody—the part you remember, the tune that stays with you. The Commitment Commons is the rhythm and harmony—the structure that gives the melody meaning and power. Each can exist independently, but together, they create something greater than the sum of their parts.